--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,1 +1,125 @@
-@import url(https://fonts.googleapis.com/css?family=Playfair);body .blog-header{line-height:1;border-bottom:1px solid #e5e5e5}body .blog-header-logo{font-family:Playfair Display,Georgia,Times New Roman,serif;font-size:2.25rem}body .blog-header-logo:hover{text-decoration:none}body h1,body h2,body h3,body h4,body h5,body h6{font-family:Playfair Display,Georgia,Times New Roman,serif}body .display-4{font-size:2.5rem}@media (min-width:768px){body .display-4{font-size:3rem}}body .nav-scroller{position:relative;z-index:2;height:2.75rem;overflow-y:hidden}body .nav-scroller .nav{display:-webkit-box;display:flex;flex-wrap:nowrap;padding-bottom:1rem;margin-top:-1px;overflow-x:auto;text-align:center;white-space:nowrap;-webkit-overflow-scrolling:touch}body .nav-scroller .nav-link{padding-top:.75rem;padding-bottom:.75rem;font-size:.875rem}body .card-img-right{height:100%;border-radius:0 3px 3px 0}body .flex-auto{-webkit-box-flex:0;flex:0 0 auto}body .h-250{height:250px}@media (min-width:768px){body .h-md-250{height:250px}}body .blog-title{margin-bottom:0;font-size:2rem;font-weight:400}body .blog-description{font-size:1.1rem;color:#999}@media (min-width:40em){body .blog-title{font-size:3.5rem}}body .blog-pagination{margin-bottom:4rem}body .blog-pagination>.btn{border-radius:2rem}body .blog-post{margin-bottom:4rem}body .blog-post-title{margin-bottom:.25rem;font-size:2.5rem}body .blog-post-meta{margin-bottom:1.25rem;color:#999}body .blog-footer{padding:2.5rem 0;color:#999;text-align:center;background-color:#f9f9f9;border-top:.05rem solid #e5e5e5}body .blog-footer p:last-child{margin-bottom:0}
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+body .blog-header {
+    line-height: 1;
+    border-bottom: 1px solid #e5e5e5
+}
+
+body .blog-header-logo {
+    font-family: "Open Sans", Arial, sans-serif;
+    font-size: 2.25rem
+}
+
+body .blog-header-logo:hover {
+    text-decoration: none
+}
+
+body h1, body h2, body h3, body h4, body h5, body h6 {
+    font-family: "Open Sans", Arial, sans-serif;
+}
+
+body .display-4 {
+    font-size: 2.5rem
+}
+
+@media (min-width: 768px) {
+    body .display-4 {
+        font-size: 3rem
+    }
+}
+
+body .nav-scroller {
+    position: relative;
+    z-index: 2;
+    height: 2.75rem;
+    overflow-y: hidden
+}
+
+body .nav-scroller .nav {
+    display: -webkit-box;
+    display: flex;
+    flex-wrap: nowrap;
+    padding-bottom: 1rem;
+    margin-top: -1px;
+    overflow-x: auto;
+    text-align: center;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch
+}
+
+body .nav-scroller .nav-link {
+    padding-top: .75rem;
+    padding-bottom: .75rem;
+    font-size: .875rem
+}
+
+body .card-img-right {
+    height: 100%;
+    border-radius: 0 3px 3px 0
+}
+
+body .flex-auto {
+    -webkit-box-flex: 0;
+    flex: 0 0 auto
+}
+
+body .h-250 {
+    height: 250px
+}
+
+@media (min-width: 768px) {
+    body .h-md-250 {
+        height: 250px
+    }
+}
+
+body .blog-title {
+    margin-bottom: 0;
+    font-size: 2rem;
+    font-weight: 400
+}
+
+body .blog-description {
+    font-size: 1.1rem;
+    color: #999
+}
+
+@media (min-width: 40em) {
+    body .blog-title {
+        font-size: 3.5rem
+    }
+}
+
+body .blog-pagination {
+    margin-bottom: 4rem
+}
+
+body .blog-pagination > .btn {
+    border-radius: 2rem
+}
+
+body .blog-post {
+    margin-bottom: 4rem
+}
+
+body .blog-post-title {
+    margin-bottom: .25rem;
+    font-size: 2.5rem
+}
+
+body .blog-post-meta {
+    margin-bottom: 1.25rem;
+    color: #999
+}
+
+body .blog-footer {
+    padding: 2.5rem 0;
+    color: #999;
+    text-align: center;
+    background-color: #f9f9f9;
+    border-top: .05rem solid #e5e5e5
+}
+
+body .blog-footer p:last-child {
+    margin-bottom: 0
+}
